# python_experiments

./: .gitignore  README.md
device_reader_dll/: CMakeLists.txt  device_reader.c  device_reader.h
device_reader_dll/tests/: CMakeLists.txt  device_reader_test.cpp
requirements/: development.txt
using_cffi/device_reader/: _device_reader_cffi.c  _device_reader_cffi_mingw64.c  _device_reader_cffi_vscode.c  abi_inline_device_reader.py  api_inline_builder_mingw64.py  api_inline_builder_vscode.py  api_inline_reader_mingw64.py  api_inline_reader_vscode.py  cffi_device_reader.py  device_reader_vscode.dll.lib  libdevice_reader.dll.lib  libdevice_reader_mingw64.dll.lib  mingw_api_inline_builder.py  mingw_api_inline_reader.py  msvc_api_inline_builder.py  msvc_api_inline_reader.py
using_cffi/device_reader/Release/: _device_reader_cffi_mingw64.cp37-win_amd64.exp  _device_reader_cffi_mingw64.cp37-win_amd64.lib  _device_reader_cffi_vscode.cp37-win_amd64.exp  _device_reader_cffi_vscode.cp37-win_amd64.lib
using_cffi/lib/: device_reader_msvc.dll.lib  libdevice_reader_mingw.dll.lib
using_cffi/tests/: mingw64_abi_inline_device_reader_test.py  test_mingw_abi_inline_device_reader.py  test_msvc_abi_inline_device_reader.py  vscode_abi_inline_device_reader_test.py
using_ctypes/device_reader/: device_reader.py
using_ctypes/tests/: device_reader_test.py
